# Official-Overcoming-Reward-Noise-in-Instruction-Guided-RL

./: .env  README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_env_setup.yml  parameters_eval_lrm.yml  parameters_expert_policy_setup.yml  parameters_generate_traj_instr_pairs.yml  parameters_minigrid_diff_env_testing_dataloader.yml  parameters_pair_spliter_n_balancer.yml  parameters_reward_machine_setup.yml  parameters_rl_policy_setup.yml  parameters_train_lang_rew_model.yml  parameters_train_rl_policy.yml
data/: README.md
job_scripts/: README.md
job_scripts/deprecated/: job_failed_rerun.sh  job_failed_rerun_1.sh  job_failed_rerun_10.sh  job_failed_rerun_11.sh  job_failed_rerun_12.sh  job_failed_rerun_13.sh  job_failed_rerun_2.sh  job_failed_rerun_20.sh  job_failed_rerun_21.sh  job_failed_rerun_22.sh  job_failed_rerun_23.sh  job_failed_rerun_24.sh  job_failed_rerun_25.sh  job_failed_rerun_26.sh  job_failed_rerun_3.sh  job_failed_rerun_4.sh  job_failed_rerun_5.sh  job_failed_rerun_6.sh  job_failed_rerun_7.sh  job_failed_rerun_8.sh  run_on_server_1.sh  run_on_server_2.sh  run_on_server_3.sh  run_on_server_4.sh  run_on_server_5.sh  run_on_server_6.sh
job_scripts/lang_rew_model_pretrain/: job_lang_rew_train_debug.sh  job_lang_rew_train_general.sh  job_lang_rew_train_minigrid.sh  job_lang_rew_train_minigrid_cnn_2.sh  job_lang_rew_train_montezuma.sh
job_scripts/rl_train_prelim/: job_ppo_crafter_normal_case.sh  job_ppo_crafter_oracle_case.sh  job_ppo_minigrid_oracle_case.sh  (+3 more)
(+200 files in other folders)
